[tool.poetry]
name = "tsgpt"
version = "0.1.0"
description = ""
authors = ["FloweryScythe13 <brichett13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bentoml = "^1.1.2"
langchain = "^0.0.271"
openai = "^0.27.8"
huggingface-hub = "^0.16.4"
pandas = "^2.0.3"
datasets = "^2.14.4"
sf-hamilton = "^1.26.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
